# wire-cell-gen-omp

./: README.md  run.sh  wc_nc_amd.sh  wc_nc_cpu.sh  wc_nc_cuda.sh
.cmake-omp-cpu/: CMakeLists.txt
.cmake-omp-cuda/: CMakeLists.txt  CMakeLists.txt.nvc.backup
.cmake-omp-cuda-gcc/: CMakeLists.txt
.cmake-omp-cuda-nvc/: CMakeLists.txt
.cmake-omp-hip/: CMakeLists.txt  CMakeLists.txt.old
cfg/pgrapher/common/sim/: nodes.jsonnet
example/: sim.fcl  sim.jsonnet  wct-sim-check.jsonnet
inc/WireCellGenOpenMP/: BinnedDiffusion_transform.h  DepoTransform.h  GaussianDiffusion.h  GdData.h  ImpactData.h  ImpactTransform.h  OpenMPArray.h  OpenMPArray_cuda.h  OpenMPArray_fftw.h  OpenMPArray_hip.h
src/: BinnedDiffusion_transform.cxx  DepoTransform.cxx  GaussianDiffusion.cxx  ImpactData.cxx  ImpactTransform.cxx  OpenMPArray.cxx  nouse.GaussianDiffusion.omp.nouse
